# rust_lisp

./: Cargo.toml  README.md  TODO.txt  default_environment.rs  interpreter.rs  main.rs  model.rs  parser.rs  utils.rs
.github/workflows/: rust.yml
src/: default_environment.rs  interpreter.rs  lib.rs  macros.rs  main.rs  model.rs  parser.rs  utils.rs
src/model/: env.rs  lambda.rs  list.rs  mod.rs  runtime_error.rs  symbol.rs  value.rs
tests/: default_environment.rs  interpreter.rs  little_lisper.rs  parser.rs
