[package]
name = "rust_lisp"
version = "0.1.0"
authors = ["brundolf"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "rust_lisp"
path = "src/lib.rs"
test = true
doc = true

[[bin]]
name = "rust_lisp"
path = "src/main.rs"
