[package]
name = "rust_lisp"
description = "A Rust-embeddable Lisp, with support for interop with native Rust functions"
version = "0.1.0"
authors = ["Brandon Smith"]
repository = "https://github.com/brundonsmith/rust_lisp"
edition = "2018"
exclude = [".github", ".vscode", "TODO.txt"]
license = "MIT"

[lib]
name = "rust_lisp"
path = "src/lib.rs"
test = true
doc = true

[[bin]]
name = "rust_lisp"
path = "src/main.rs"
