[package]
name = "rust_lisp"
description = "A Rust-embeddable Lisp, with support for interop with native Rust functions"
version = "0.6.0"
authors = ["Brandon Smith"]
repository = "https://github.com/brundonsmith/rust_lisp"
edition = "2021"
exclude = [".github", ".vscode", "TODO.txt"]
license = "MIT"

[lib]
name = "rust_lisp"
path = "src/lib.rs"
test = true
doc = true

[[bin]]
name = "rust_lisp"
path = "src/main.rs"

[features]
# What integer to use for Value::Int
bigint = ["num-bigint", "num-traits"]
i128 = []
i64 = []
i16 = []
i8 = []

# Use f64 for Value::Float, if unset, use f32
f64 = []

[dependencies]
cfg-if = "1.0"
num-traits = { version = "0.2", optional = true }
num-bigint = { version = "0.4", optional = true }
